# BB-M7011E

./: .coverage  .gitignore  Project Proposal.md  README.md  docker-compose-full.yml  dynweb.md  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  pr-checks.yml
OldCode/: create_db.py  main.py
argocd/: Chart.yaml  README.md  values.yaml
argocd/templates/: configmap.yaml  ingress.yaml  install.yaml
common/: README.md  pyproject.toml
common/bb_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
common/common/: __init__.py  auth.py
environments/dev/: values.yaml  values_ronstad.yaml
environments/production/: values.yaml
environments/staging/: values.yaml
item-microservice/: .dockerignore  .env  Dockerfile  docker-compose.yml  requirements.txt
item-microservice/app/: main.py
item-microservice/tests/: test_main.py
item_service/: .coverage  .coveragerc  .flake8  Dockerfile  requirements.txt
item_service/app/: auth.py  database.py  main.py
item_service/k8s/: Chart.yaml
item_service/tests/: test_auth.py  test_database.py  test_main.py
keycloak/: Chart.yaml  install.sh  values.yaml
monitoring/: prometheus.yml
payment-service/: .gitignore  README.md  main.py
payment_service/: .coverage  .coveragerc  .env  .flake8  Dockerfile  README.md  main.py  requirements.txt
product-microservice/: .coverage
supabase-service/: endpoints.yaml  install_guide.md  kustomization.yaml  supabase-service.yaml
user_service/: Dockerfile  README.md  main.py  requirements.txt
worker/: .dockerignore  Dockerfile  requirements.txt
(+58 files in other folders)
